--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ lalrpop = "0.19.7"
 [dependencies]
 lalrpop-util = { version = "0.19.7", features = ["lexer"]}
 regex = "1"
+id-arena = "2.2.1"
+walrus = "0.19.0"
